src/objects/Apttus_CMConfig__AgreementFootnote__c.object
<CustomObject>
    <description>Represents the footnote available in an agreement</description>
    <fields>
        <fullName>Apttus_CMConfig__AgreementId__c</fullName>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Footnotes</relationshipLabel>
        <relationshipName>AgreementFootnotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__FootnoteBody__c</fullName>
        <description>The body of the footnote</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The body of the footnote</inlineHelpText>
        <label>Footnote Body</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__FootnoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated footnote</description>
        <inlineHelpText>ID of the associated footnote</inlineHelpText>
        <label>Footnote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__Footnote__c.Apttus_Config2__Type__c</field>
                <operation>equals</operation>
                <value>Product, Agreement</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__Footnote__c</referenceTo>
        <relationshipLabel>Agreement Footnotes</relationshipLabel>
        <relationshipName>AgreementFootnotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__FootnoteText__c</fullName>
        <description>The footnote text</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Footnote Text (Deprecated)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__FootnoteType__c</fullName>
        <description>The footnote type</description>
        <formula>TEXT(Apttus_CMConfig__FootnoteId__r.Apttus_Config2__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Footnote Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product/option associated with the footnote</description>
        <inlineHelpText>ID of the product/option associated with the footnote</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Footnotes</relationshipLabel>
        <relationshipName>AgreementFootnotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Sequence__c</fullName>
        <description>The footnote display sequence</description>
        <inlineHelpText>The footnote display sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agreement Footnote</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Footnote Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Footnotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>